# disinfo

./: .config.sample.json  .gitignore  LICENSE  README.md  data_service.py  disinfo.code-workspace  install.sh  maindev.py  pyproject.toml  requirements-dev.txt  requirements.txt  rpi-rgb-led-matrix.code-workspace  test.py
assets/: icons.sketch
assets/cv/: wmkey.raw
assets/moon/: README.md
assets/raster/: casette-tape-25x25.aseprite  dishwasher.aseprite  file-icon.aseprite  fileicon-5x5.aseprite  france-info.aseprite  metro-8.aseprite  metro-isssues.aseprite  metro-issues.aseprite  metro-paris-16x16.aseprite  metro-paris-old-52x16.aseprite  nozzle-5x5.aseprite  nozzle-alt-9x9.aseprite  nozzle.aseprite  pause-5x5.aseprite  plant-9x9.aseprite  play-5x5.aseprite  play.9x9.aseprite  printerbed-5x5.aseprite  spotify-5x5.aseprite  sunrise-7x7.aseprite  sunset-11x5.aseprite  sunset-7x9.aseprite  trash-bin-green-10x14.aseprite  trash-bin-white-10x14.aseprite  trash-bin-yellow-10x14.aseprite  warning-tile-3x3.aseprite
clients/websocket-rpi-matrix/: di_websocket_client.conf  hub75_websocket_client.py  main.py  pyproject.toml
clients/websocket-rpi-matrix/src/websocket_rpi_matrix/: __init__.py  _vl53lxcx.py  di_remote.py  hub75_websocket_client.py
clients/websocket-rpi-matrix/src/websocket_rpi_matrix/libs/: sparkfun_da7280.py
clients/websocket-rpi-matrix/src/websocket_rpi_matrix/modulino/: buzzer.py  modulino.py
clients/websocket_rpi_matrix/: di_websocket_client.conf  hub75_websocket_client.py  main.py  pyproject.toml
clients/websocket_rpi_matrix/sensors/: _apds9960.py  di_remote.py  gesture.py
config/: di2_salon.conf  di2_study.sh  di_3dp_udp_renderer.conf  di_dataservice.conf  di_haservice.conf  di_pico_udp_renderer.conf  di_renderer.conf  di_salon_udp_renderer.conf  di_server.conf  di_shazam.conf
disinfo/: compositor.py  config.py  config.sample.py  data_structures.py  redis.py
disinfo/apps/: news.py  news_highlights.py  timer.py
disinfo/components/: button.py  elements.py  fonts.py  frame_cycler.py  label.py  layers.py  layouts.py  scroller.py  spriteim.py  stack.py  (+3 more)
disp_info/: compositor.py  config.sample.py  data_service.py  data_structures.py  fifo_renderer.py  gif_renderer.py  ha_service.py  matrix_renderer.py  redis.py  renderer.py  sixel_renderer.py  sprite_icons.py  state_proxy.py  utils.py  weather_icons.py
web/: fs-info.html  index.html
(+114 files in other folders)
